feat: add strategy subscriptions, display names, improve use isActive in strategy
