# Application/Strategies/Models/StrategySubscriptionDto.cs
@@ -1,0 +1,5 @@
+using Domain.Entities;
+
+namespace Application.Strategies.Models;
+
+public sealed record StrategySubscriptionDto(Strategy Strategy, bool IsSubscribed);
