# Infrastructure/DataBase/Configuration/ReferenceDataModelBuilderExtensions.cs
@@ -15,6 +15,7 @@ internal static class ReferenceDataModelBuilderExtensions
 					Id = 1,
 					Name = "TrendFollowingStrategy",
 					Description = "Базовая стратегия следования тренду для актива. Минимальный риск, редкие сигналы.",
+					DisplayName = "Следование тренду",
 					Accuracy = 81,
 					SignalFrequency = "1–2 раза в месяц",
 					InvestmentHorizon = "1–3 недели",
@@ -29,6 +30,7 @@ internal static class ReferenceDataModelBuilderExtensions
 					Id = 2,
 					Name = "Test",
 					Description = "Тестовая стратегия. 100000% прибыли в наносекунду",
+					DisplayName = "Тестовая стратегия",
 					Accuracy = 99,
 					SignalFrequency = "3 раза в месяц",
 					InvestmentHorizon = "до 1 недели",
